fix: change search from get to post action, change output fullname to username
